--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
     <div id="controls">
         <div id="score">Your score</div>
         <div id="start"><input type="image" img src=""></div>
-        <div id="time">Time</div>
+        <div id = "timer"></div>
     </div>
 <div id="boardDiv">
        
-
 </div>
-
-
 </div>
+<button id="flag" style = "width: 50px; height: 50px">
+  <div class="flagcol" id = "flagleft">
+      <div class = "flagrow" id="flagtriangle" > </div>
+      <div class = "flagrow"> </div>
+  </div>
+  <div class="flagcol" id = "flagstick">
+
+  </div>
+</button>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script src="./index.js"></script>
