--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
   </div>
 </button>
+
+<div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script src="./index.js"></script>
