--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </button>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<script src="./index.js"></script>
+<script src="./mine.js"></script>
 </body>
 </html>
 
