--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="game">
     <div id="controls">
         <div id="score">Your score</div>
-        <div id="start"><input type="image" img src=""></div>
+        <div id="start"><input type="image" img src="smile.png" height="40px"></div>
         <div id = "timer"></div>
     </div>
 <div id="boardDiv">
