--- a/index.html
+++ b/index.html
@@ -3,30 +3,41 @@
       <title>MineSWEEPER</title>
       <link rel="stylesheet" href="./style.css">
     </head>
-    <body>
-        Welcome to MineSWEEPER!!!!
+    <header>
+      <nav>
         
+      </nav>
+    </header>
+    <body>
+        <h1>Welcome to MineSWEEPER!!!!</h1>
+  
 <div id="game">
     <div id="controls">
         <div id="score">Your score</div>
-        <div id="start"><input type="image" img src="smile.png" height="40px"></div>
+        <div id="start"><input type="image" img  src="wait.gif" id = "image" height="40px"></div>
         <div id = "timer"></div>
     </div>
-<div id="boardDiv">
+<div id="boardDiv" >
        
 </div>
+
 </div>
-<button id="flag" style = "width: 50px; height: 50px">
+<div class="customAlert confirmButton">
+  <p class="message"></p>
+	 
+</div>
+  
+<!-- <input type="button" class="rab" value="Raise alert"> -->
+<!-- <button id="flag" style = "width: 50px; height: 50px">
   <div class="flagcol" id = "flagleft">
       <div class = "flagrow" id="flagtriangle" > </div>
       <div class = "flagrow"> </div>
   </div>
-  <div class="flagcol" id = "flagstick">
+  <div class="flagcol" id = "flagstick"> -->
 
   </div>
 </button>
-
-<div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+<!-- <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script src="./mine.js"></script>
